--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -43,23 +43,14 @@
         }
     </style>
 </head>
-<body>
-    <div>
-        <h3>Список товаров</h3>
-        <table>
-            <tr>
-                <th>Наименование</th>
-                <th>Цена</th>
-                <th>Действие</th>
-            </tr>
-            {% for p in products %}
-                <tr>
-                    <td>{{ p.name }}</td>
-                    <td>{{ p.price }}</td>
-                    <td><a href="/buy/{{ p.id }}">Купить</a></td>
-                </tr>
-            {% endfor %}
-        </table>
-    </div>
+    <h1>Добро пожаловать в магазин!</h1>
+    <ul>
+        {% for product in products %}
+            <li>
+                {{ product.name }} - {{ product.price }} руб. (Количество: {{ product.quantity }})
+                <a href="{% url 'buy' product.id %}">Купить</a>
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
