--- a/shop/templates/shop/purchase_form.html
+++ b/shop/templates/shop/purchase_form.html
@@ -79,23 +79,20 @@
 <body>
     <div class="container">
         <h3>Покупка товара: {{ product.name }}</h3>
-        <form method="post">{% csrf_token %}
-            <table>
-                <tr>
-                    <td><p>Введите свое имя</p></td>
-                    <td><input type="text" name="person" required /></td>
-                </tr>
-                <tr>
-                    <td><p>Введите адрес доставки:</p></td>
-                    <td><input type="text" name="address" required /></td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align:center;">
-                        <input type="submit" value="Отправить" />
-                    </td>
-                </tr>
-            </table>
+        <form method="post">
+            {% csrf_token %}
+            <div class="container">
+                <h3>Форма покупки</h3>
+                <label for="person">Имя:</label>
+                <input type="text" id="person" name="person" required>
+        
+                <label for="address">Адрес:</label>
+                <input type="text" id="address" name="address" required>
+        
+                <input type="submit" value="Купить">
+            </div>
         </form>
+        
     </div>
     <div class="footer">
         <p>© 2024 Ваш магазин</p>
